--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,27 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none; 
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: rgba(75, 85, 99, 0); 
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(107, 114, 128, 0.7); 
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(107, 114, 128, 0); 
+}
+
+
+.custom-scrollbar {
+  scrollbar-width: thin; 
+  scrollbar-color: rgba(107, 114, 128, 0.7) rgba(75, 85, 99, 0.1);
+}
